--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "hail812/yii2-adminlte3": "~1.1",
         "kartik-v/yii2-widget-datepicker": "dev-master",
         "kartik-v/yii2-widget-select2": "@dev",
-        "kartik-v/yii2-mpdf": "dev-master"
+        "kartik-v/yii2-mpdf": "dev-master",
+        "miloschuman/yii2-highcharts-widget": "^10.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
